@@ -33,6 +33,9 @@ Deprecated:
 
   * A future minor release plans to drop support for Visual Studio 2013.
 
+  * `ENABLE_SASL=CYRUS` on Windows platforms is deprecated. Support for `ENABLE_SASL=CYRUS` on Windows may be dropped in a future major release.
+    * The associated Windows-only option `CYRUS_PLUGIN_PATH_PREFIX` is deprecated.
+
 libmongoc 1.27.6
 ================
 
